apps/dex/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: dex.thecluster.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dex
                port:
                  number: 5556
